# blossom

./: .buildinfo.bls  .clang-format  .gitignore  .travis.yml  404.html  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  book.sh  book.toml  build.sh  conditionals.html  core_funcs.html  data_types.html  ex.bls  functions.html  getting_started.html  highlight.js  imports.html  index.html  installation.html  introduction.html  loops.html  naming_conventions.html  packaging.sh  print.html  searchindex.js  searchindex.json  stdlib.html  t.bls  variables.html
.github/workflows/: gh-pages.yml
.metals/: metals.lock.db
book/: 404.html  book.toml  chapter_1.html  index.html  print.html
book/html/: 404.html  index.html  introduction.html  print.html  searchindex.js
book/src/: SUMMARY.md  conditionals.md  core_funcs.md  data_types.md  functions.md  getting_started.md  imports.md  installation.md  loops.md  naming_conventions.md  stdlib.md  variables.md
book/src/gs/: additional-notes.md
book/src/imports/: c++_modules.md  external.md  standard.md  syntax.md
book/src/stdlib/: optionals.md
examples/: background_threads.bls  bf_interpreter.bls  combinations.bls  input.bls  notes.bls  producer_consumer_threads.bls  rng.bls
examples/std/: optional.bls
gs/: additional-notes.html
html/: 404.html  index.html  introduction.html  print.html  searchindex.json
imports/: external.html  standard.html  syntax.html
include/: helper.bls  test.bls
include/Common/: Config.hpp.in  Env.hpp  Errors.hpp  FS.hpp  IO.hpp  String.hpp
include/Compiler/: Args.hpp  CodeGen.hpp  Config.hpp  DumpFile.hpp  Lex.hpp  LoadFile.hpp  Parser.hpp
include/Compiler/CodeGen/: Internal.hpp
include/Compiler/Parser/: Internal.hpp  ParseHelper.hpp  Stmts.hpp
include/VM/: Consts.hpp  DyLib.hpp  Memory.hpp  OpCodes.hpp  OpCodesCompat.h  SrcFile.hpp  VM.hpp  VMFailStack.hpp  VMStack.hpp  Vars.hpp
include/VM/Vars/: Base.hpp
include/std/: bytebuffer.bls  bytebuffer_type.hpp  cmake_gen.bls  fs.bls  fs_type.hpp  io.bls  json.bls  map.bls  map_type.hpp  math.bls  multiproc_type.hpp  mutex_type.hpp  optional.bls  os.bls  ptr.bls  ptr_type.hpp  random.bls  rng.bls  stat.bls  str.bls  struct_type.hpp  sys.bls  term_type.hpp  thread_type.hpp  time.bls  vec.bls  vec_type.hpp
include/std/cmake_gen/: base.bls  binary.bls  find_lib.bls  install.bls  shared_lib.bls
research/: overloading.md
resources/: install.sh
src/: introduction.md
src/Common/: Env.cpp  Errors.cpp  FS.cpp  IO.cpp  String.cpp
src/Compiler/: Args.cpp  CodeGen.cpp  DumpFile.cpp  Lex.cpp  LoadFile.cpp  Main.cpp  Parser.cpp
src/Compiler/CodeGen/: Block.cpp  Conditional.cpp  Expr.cpp  For.cpp  Foreach.cpp  FuncCall.cpp  FuncDef.cpp  ImplDef.cpp  Import.cpp  Simple.cpp  SingleOperandStmt.cpp  VarDecl.cpp  While.cpp
src/Compiler/Parser/: Block.cpp  Conditional.cpp  Expr.cpp  For.cpp  Foreach.cpp  FuncCall.cpp  FuncDef.cpp  ImplDef.cpp  Import.cpp  ParseHelper.cpp  SingleOperandStmt.cpp  Stmts.cpp  VarDecl.cpp  While.cpp
src/VM/: Consts.cpp  DyLib.cpp  Exec.cpp  Memory.cpp  OpCodes.cpp  SrcFile.cpp  VM.cpp  VMFailStack.cpp  VMStack.cpp  Vars.cpp
src/VM/Vars/: All.cpp  Base.cpp  Bool.cpp  Flt.cpp  Func.cpp  Int.cpp  Map.cpp  Nil.cpp  Src.cpp  Str.cpp  TypeId.cpp  Vec.cpp
src/std/: bytebuffer.cpp  bytebuffer_type.cpp  fmt.cpp  fs.cpp  fs_type.cpp  io.cpp  lang.cpp  map.cpp  map_type.cpp  multiproc.cpp  multiproc_type.cpp  mutex.cpp  mutex_type.cpp  os.cpp  ptr.cpp  ptr_type.cpp  rng.cpp  stat.cpp  struct_type.cpp  sys.cpp  term.cpp  term_type.cpp  thread_type.cpp  threads.cpp  time.cpp  vec.cpp  vec_type.cpp
stdlib/: optionals.html
tests/: bin_expo.bls  bin_idx_tree.bls  comments.bls  conditionals.bls  default_args.bls  errors.bls  facto_iterate.bls  facto_recurse.bls  fast_substr.bls  find_exec.bls  hello_world.bls  if.bls  int_bin_conv.bls  knuth-up-arrow.bls  largest_in_list.bls  multi_loops.bls  multi_loops_range.bls  quicksort.bls  reverse_list.bls  src_dir_path.bls  stack_ex.bls  sum_one_to_n.bls  while.bls
tests/builtin/: apply.bls  core.bls  flt.bls  int.bls  mod.bls  str.bls
tests/std/: bytebuffer.bls  fmt.bls  fs.bls  io.bls  json.bls  lang.bls  map.bls  os.bls  ptr.bls  rng.bls  stat.bls  str.bls  sys.bls  vec.bls
